11.3.5 (09-01-2024)
- Improvement: Add document certification information in debt reports [#qubIT-Fenix-4794]
- Bug Fix: Fill information in debt report for debit entries associated with custom academic debt treasury events [#qubIT-Fenix-4794]
- Improvement Fill settlement report with invoice entry net exemption [#qubIT-Fenix-4794]
- Bug Fix: Translate missing message key [#qubIT-Fenix-4748]

11.3.4 (03-01-2024)
- Bug Fix: Translate missing message key [#qubIT-Fenix-4748]

11.3.3 (28-12-2023)
- Refactor: Remove usage of execution degree finder by academic interval [#qubIT-Fenix-1590]
- Refactor: Declare property in DML for academic treasury event, to record the academic process number. To be used with the custom academic debt (WIP) [#qubIT-Fenix-4756]

11.3.2 (18-12-2023)
- Improvement: Adds fenixedu OSS DM [#qubIT-Omnis-4736]
- Improvement: Define personal email, institutional email and default email in reimbuserment report entry bean [#qubIT-Fenix-4691]

11.3.1 (12-12-2023)
- Bug Fix: Fix bug in PersonCustomer#switchCustomer, which prevents the creation of a new debt account [#qubIT-Fenix-4662]

11.3.0 (11-12-2023)
- Improvement: Apply balance transfer service automatically, if the balance transfer service implementation allows [#qubIT-Fenix-4662]

11.2.3 (07-12-2023)
- Bug Fix: Fill information in debt report for debit entries associated with custom academic debt treasury events [#qubIT-Fenix-4659]

11.2.2 (06-12-2023)
- Improvement: Add finantial entity info and net exemption to debts report bean [#qubIT-Fenix-4655]

11.2.1 (05-12-2023)
- Refactor: Implements properties in debt report bean, to make available for reports [#qubIT-Fenix-4646]
- Bug Fix: Fix reading the registration last state type description, in AcademicTreasuryEvent#registrationStateDescription [#qubIT-Fenix-4641]
- Bug Fix: Add missing label translation, about the error of duplicated academic treasury event for registration tuition payment plan [#qubIT-Fenix-4641]

11.2.0 (22-11-2023)